Thu Jun 30 09:29:24 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/new_RepositoryManager/RMadmin.cpp
	* DAnCE/new_RepositoryManager/RepositoryManager.cpp
	* DAnCE/new_RepositoryManager/ZIP_Wrapper.cpp
	* DAnCE/new_RepositoryManager/ZIP_Wrapper.h
	* DAnCE/new_RepositoryManager/new_RepositoryManager_Impl.cpp
	* DAnCE/new_RepositoryManager/new_RepositoryManager_Impl.h

	Fixed Doxygen documentation tags, fixed some indenting,
	removed tabs.

Thu Jun 30 09:59:17 2005  William Otte  <wotte@atl.lmco.com>

	* DAnCE/Plan_Launcher/Plan_Launcher.cpp
	* DAnCE/Plan_Launcher/Plan_Launcher.mpc
	* DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp
	* DAnCE/Plan_Launcher/Plan_Launcher_Impl.h

	Factored out the plan launcher capability into a shared library so
	applications can use its functionality. 

Thu Jun 30 04:33:35 2005 ming xiong <mxiong@dre.vanderbilt.edu>

       * DAnCE/ComponentPackager/Base_Packager.h
       * DAnCE/ComponentPackager/CPK_Packager.cpp
       * DAnCE/ComponentPackager/CPK_Packager.h
       * DAnCE/ComponentPackager/PDL_Handler.cpp
       * DAnCE/ComponentPackager/PDL_Handler.h
       * DAnCE/ComponentPackager/Base_Packager.cpp
       
       Added a release operation for destructor of PDL_Handler;Changed the
       definition of input parameter for CPK_Packager::createPackager to const
       to indicate it can not be changed
       
Thu Jun 30 00:37:35 EDT 2005 Stoyan Paunov <s.paunov@vanderbilt.edu>

	* DAnCE/new_RepositoryManager/RMadmin.cpp
	* DAnCE/new_RepositoryManager/RepositoryManager.cpp
	* DAnCE/new_RepositoryManager/ZIP_Wrapper.cpp
	* DAnCE/new_RepositoryManager/ZIP_Wrapper.h
	* DAnCE/new_RepositoryManager/new_RepositoryManager_Impl.cpp
	* DAnCE/new_RepositoryManager/new_RepositoryManager_Impl.h

	removed the "@file" comments which apparently confuse Doxygen.


Wed Jun 29 17:00:57 2005  Cassia Tatibana  <cassia@dre.vanderbilt.edu>

       * DAnCE/ExecutionManager/DAM_Map.cpp:
       * DAnCE/ExecutionManager/Execution_Manager_Impl.cpp:
